# agent-main-data

./: .gitignore  README.md  SUMMARY.md  package-lock.json
a2a/agentic-workshop/: README.md  main.py  pyproject.toml  set_env.sh
a2a/agentic-workshop/agents/: README.md  cloudbuild-expanded.yaml
a2a/agentic-workshop/instavibe/: setup.py
aws-strands/bedrock-agent-core/: .env.example  README.md  pyproject.toml  strands_travel_agent.py
manager-agents/: .env.example  README.md  basic_example.py  main.py  pyproject.toml
manager-agents/agents/database/: sql-agent.md
manager-agents/agents/design/: ui-designer.md  ux-researcher.md
manager-agents/agents/engineering/: README.md  frontend-developer.md
manager-agents/agents/financial-services/: README.md  banking-assistant.md  currency-exchange-assistant.md  invoice-data-extractor.md
manager-agents/agents/food-service/: README.md  bb.md.v2  burger-store-assistant.md
manager-agents/agents/marketing/: app-store-optimizer.md  content-creator.md  instagram-curator.md  twitter-engager.md
manager-agents/agents/product/: shape-attribute-extractor.md
manager-agents/agents/studio-operations/: README.md  support-responder.md
manager-agents/agents/web/: web-scraper.md  (+1 more)
manager-agents/memory/: google_mb.py  google_mb_lib.py  google_memory_bank.py
manager-agents/orchestrator/: orchestrator.md  orchestrator_core.py  routing.md  utils.py
manager-agents/output/: invoice.py  manager_output.py  shape.py  sql.py  text.py
manager-agents/tools/: datetime.py  finance.py  manager.py  memory.py  misc.py  search.py  weather.py
(+135 files in other folders)
