[project]
name = "manager-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.16",
    "pathlib>=1.0.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.9",
    "pydantic-ai-slim[a2a,openai,vertexai]>=0.4.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
memory = [
    "google-cloud-aiplatform>=1.100.0",
]
